[tool.poetry]
name = "retrieval-exploration"
version = "0.1.0"
description = ""
authors = ["John Giorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
transformers = "^4.19.0"
tokenizers = "^0.12.1"
datasets = "^2.1.0"
sentence-transformers = "^2.1.0"
flatten-dict = "^0.4.2"
sacremoses = "^0.0.53"
sentencepiece = "^0.1.96"
nlpaug = {git = "https://github.com/makcedward/nlpaug.git", rev = "master"}
more-itertools = "^8.13.0"
nltk = "^3.7"
py7zr = {version = "^0.18.5", optional = true}
protobuf = {version = "^3.20.1", optional = true}
rouge-score = {version = "^0.0.4", optional = true}
bert-score = {version = "^0.3.11", optional = true}

[tool.poetry.extras]
# Extra dependencies required for summarization tasks.
# Taken from: https://github.com/huggingface/transformers/blob/main/examples/pytorch/summarization/requirements.txt
summarization = ["py7zr", "protobuf", "rouge-score", "bert-score"]

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", extras = ["jupyter"]}
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
codecov = "^2.1.12"

# This configuration is adapted from: 
# - https://github.com/allenai/allennlp/blob/main/pyproject.toml
# - https://github.com/huggingface/transformers/blob/main/pyproject.toml
[tool.black]
line-length = 119
target-version = ['py35']

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"