[tool.poetry]
name = "retrieval-exploration"
version = "0.1.0"
description = ""
authors = ["John Giorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "^2.2.2"
diskcache = "^5.4.0"
platformdirs = "^2.5.2"
typer = "^0.6.1"
rich = "^12.5.1"
torch = "^1.10.0"
transformers = "^4.19.0"
tokenizers = "^0.12.1"
datasets = "^2.4.0"
sentence-transformers = "^2.1.0"
flatten-dict = "^0.4.2"
sacremoses = "^0.0.53"
sentencepiece = "^0.1.96"
nlpaug = "^1.1.11"
more-itertools = "^8.13.0"
nltk = "^3.7"
py7zr = "^0.18.5"
protobuf = "^3.20.1"
rouge-score = "^0.0.4"
bert-score = "^0.3.11"
# Can install from PyPI when this branch is merged into latest release
python-terrier = {git = "https://github.com/terrier-org/pyterrier.git", rev = "master", optional = true}
pyterrier-sentence-transformers = {git = "https://github.com/soldni/pyterrier_sentence_transformers.git", optional = true}

[tool.poetry.extras]
# Extra dependencies required for retrieval.
retrieval = ["python-terrier", "pyterrier-sentence-transformers"]

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", extras = ["jupyter"]}
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
codecov = "^2.1.12"
hypothesis = "^6.52.3"

# This configuration is adapted from: 
# - https://github.com/allenai/allennlp/blob/main/pyproject.toml
# - https://github.com/huggingface/transformers/blob/main/pyproject.toml
[tool.black]
line-length = 119
target-version = ['py35']

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"